
Recently added terms and sources can be found on the [latest additions](/latest) page.

## 2.4.1

Terms: _$t
Sources: _$s

### Summary of changes:

+ Added new terms
+ Added new source
+ Updated and expanded several existing entries
+ Added [sitemap](/sitemap.xml) link to footer
+ Added current version number to footer
+ Added title attributes to main navigational links
+ Updated [Kirby](https://getkirby.com/) to version [2.5.6](https://getkirby.com/changelog/kirby-2-5-6)

## 2.4.0

13 October 2017

Terms: 1,135
Sources: 107

### Summary of changes:

+ Added 25 new terms
+ Added 1 new source
+ Updated and expanded dozens of existing entries
+ Updated [Kirby](https://getkirby.com/) to version [2.5.5](https://getkirby.com/changelog/kirby-2-5-5)

## 2.3.1

17 September 2017

Terms: 1,110
Sources: 106

### Summary of changes:

+ Added 58 new terms
+ Added 8 new sources
+ Updated and expanded dozens of existing entries
+ Implemented [Kirby Meta Tags](https://github.com/pedroborges/kirby-xml-sitemap) plugin
+ Added [Open Graph](http://ogp.me/) and [Twitter Cards](https://dev.twitter.com/cards/overview) meta tag support
+ Updated site and mobile device icons

## 2.3.0

24 April 2017

Terms: 1,052
Sources: 98

### Summary of changes:

+ Added 45 new terms
+ Added 3 new sources
+ Updated and expanded dozens of existing entries
+ Added page listing the [latest additions](/latest) to the glossary
+ Moved [about](/about) and [change log](/changes) links to footer
+ Added option to set navigation link text for each page
+ Legacy domain links now redirect to [newtonglossary.com](http://newtonglossary.com/)
+ Implemented [Kirby GA](https://github.com/jenstornell/kirby-ga) plugin for [Google Analytics](https://www.google.com/analytics/) integration
+ Implemented [Kirby XML Sitemap](https://github.com/pedroborges/kirby-xml-sitemap) plugin
+ Added XML [sitemap](/sitemap.xml) for search engine indexing

## 2.2.1

16 January 2017

Terms: 1,007
Sources: 95

### Summary of changes:
