@@ -56,7 +56,8 @@ To add a bit of spit and polish to our Kirby experience, we use the following ha
 + [Alphabetise](https://github.com/shoesforindustry/kirby-plugins-alphabetise) _by [Russ Baldwin](http://shoesforindustry.net/)_
 + [Cachebuster](https://github.com/getkirby-plugins/cachebuster-plugin) _by [Bastian Allgeier](https://bastianallgeier.com/)_
 + [Kirby GA](https://github.com/jenstornell/kirby-ga) _by [Jens Törnell](http://www.jenst.se/)_
-+ [Kirby Meta Tags](https://github.com/pedroborges/kirby-meta-tags) _by [Pedro Borges ](https://pedroborg.es/)_
++ [Kirby Meta Tags](https://github.com/pedroborges/kirby-meta-tags) _by [Pedro Borges](https://pedroborg.es/)_
++ [Kirby Paperback Export](https://github.com/splorp/kirby-paperback-export) _by [Grant Hutchinson](http://splorp.com/)_
 + [Kirby XML Sitemap](https://github.com/pedroborges/kirby-xml-sitemap) _by [Pedro Borges](https://pedroborg.es/)_
 
 And finally, god bless [BBEdit](http://www.barebones.com/products/bbedit/).
